// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`All props 1`] = `
<div>
  <div
    class="apptr__form-input-container _two-columns"
  >
    <label>
       
      main:dateTime:Day
    </label>
    <select
      autocomplete="none"
      class="tr__form-input-select apptr__input _input-select"
      id="DayRangeWidgetId_periodGroup"
      name="DayRangeWidgetId_periodGroup"
      style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;"
    >
      <option
        value="custom"
      >
        main:dateTime:dayPeriod:Custom
      </option>
      <option
        value="week"
      >
        main:dateTime:dayPeriod:Week
      </option>
      <option
        value="week-end"
      >
        main:dateTime:dayPeriod:WeekEnd
      </option>
      <option
        value="all"
      >
        main:dateTime:dayPeriod:All
      </option>
    </select>
  </div>
  <div
    class="tr__form-dayPicker"
  >
    <div
      class="dayPickerOption"
    >
      <input
        checked=""
        id="DayRangeWidgetId_Monday"
        name="Monday"
        title="Monday"
        type="checkbox"
        value="Monday"
      />
      <label
        for="DayRangeWidgetId_Monday"
      >
        main:dateTime:weekdaysAbbr:monday
      </label>
    </div>
    <div
      class="dayPickerOption"
    >
      <input
        checked=""
        id="DayRangeWidgetId_Tuesday"
        name="Tuesday"
        title="Tuesday"
        type="checkbox"
        value="Tuesday"
      />
      <label
        for="DayRangeWidgetId_Tuesday"
      >
        main:dateTime:weekdaysAbbr:tuesday
      </label>
    </div>
    <div
      class="dayPickerOption"
    >
      <input
        checked=""
        id="DayRangeWidgetId_Wednesday"
        name="Wednesday"
        title="Wednesday"
        type="checkbox"
        value="Wednesday"
      />
      <label
        for="DayRangeWidgetId_Wednesday"
      >
        main:dateTime:weekdaysAbbr:wednesday
      </label>
    </div>
    <div
      class="dayPickerOption"
    >
      <input
        id="DayRangeWidgetId_Thursday"
        name="Thursday"
        title="Thursday"
        type="checkbox"
        value="Thursday"
      />
      <label
        for="DayRangeWidgetId_Thursday"
      >
        main:dateTime:weekdaysAbbr:thursday
      </label>
    </div>
    <div
      class="dayPickerOption"
    >
      <input
        id="DayRangeWidgetId_Friday"
        name="Friday"
        title="Friday"
        type="checkbox"
        value="Friday"
      />
      <label
        for="DayRangeWidgetId_Friday"
      >
        main:dateTime:weekdaysAbbr:friday
      </label>
    </div>
    <div
      class="dayPickerOption"
    >
      <input
        id="DayRangeWidgetId_Saturday"
        name="Saturday"
        title="Saturday"
        type="checkbox"
        value="Saturday"
      />
      <label
        for="DayRangeWidgetId_Saturday"
      >
        main:dateTime:weekdaysAbbr:saturday
      </label>
    </div>
    <div
      class="dayPickerOption"
    >
      <input
        id="DayRangeWidgetId_Sunday"
        name="Sunday"
        title="Sunday"
        type="checkbox"
        value="Sunday"
      />
      <label
        for="DayRangeWidgetId_Sunday"
      >
        main:dateTime:weekdaysAbbr:sunday
      </label>
    </div>
  </div>
</div>
`;

exports[`Disabled 1`] = `
<div>
  <div
    class="apptr__form-input-container _two-columns"
  >
    <label>
       
      main:dateTime:Day
    </label>
    <select
      autocomplete="none"
      class="tr__form-input-select apptr__input _input-select"
      disabled=""
      id="DayRangeWidgetId_periodGroup"
      name="DayRangeWidgetId_periodGroup"
      style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;"
    >
      <option
        value="custom"
      >
        main:dateTime:dayPeriod:Custom
      </option>
      <option
        value="week"
      >
        main:dateTime:dayPeriod:Week
      </option>
      <option
        value="week-end"
      >
        main:dateTime:dayPeriod:WeekEnd
      </option>
      <option
        value="all"
      >
        main:dateTime:dayPeriod:All
      </option>
    </select>
  </div>
  <div
    class="tr__form-dayPicker"
  >
    <div
      class="dayPickerOption"
    >
      <input
        checked=""
        disabled=""
        id="DayRangeWidgetId_Monday"
        name="Monday"
        title="Monday"
        type="checkbox"
        value="Monday"
      />
      <label
        for="DayRangeWidgetId_Monday"
      >
        main:dateTime:weekdaysAbbr:monday
      </label>
    </div>
    <div
      class="dayPickerOption"
    >
      <input
        checked=""
        disabled=""
        id="DayRangeWidgetId_Tuesday"
        name="Tuesday"
        title="Tuesday"
        type="checkbox"
        value="Tuesday"
      />
      <label
        for="DayRangeWidgetId_Tuesday"
      >
        main:dateTime:weekdaysAbbr:tuesday
      </label>
    </div>
    <div
      class="dayPickerOption"
    >
      <input
        checked=""
        disabled=""
        id="DayRangeWidgetId_Wednesday"
        name="Wednesday"
        title="Wednesday"
        type="checkbox"
        value="Wednesday"
      />
      <label
        for="DayRangeWidgetId_Wednesday"
      >
        main:dateTime:weekdaysAbbr:wednesday
      </label>
    </div>
    <div
      class="dayPickerOption"
    >
      <input
        disabled=""
        id="DayRangeWidgetId_Thursday"
        name="Thursday"
        title="Thursday"
        type="checkbox"
        value="Thursday"
      />
      <label
        for="DayRangeWidgetId_Thursday"
      >
        main:dateTime:weekdaysAbbr:thursday
      </label>
    </div>
    <div
      class="dayPickerOption"
    >
      <input
        disabled=""
        id="DayRangeWidgetId_Friday"
        name="Friday"
        title="Friday"
        type="checkbox"
        value="Friday"
      />
      <label
        for="DayRangeWidgetId_Friday"
      >
        main:dateTime:weekdaysAbbr:friday
      </label>
    </div>
    <div
      class="dayPickerOption"
    >
      <input
        disabled=""
        id="DayRangeWidgetId_Saturday"
        name="Saturday"
        title="Saturday"
        type="checkbox"
        value="Saturday"
      />
      <label
        for="DayRangeWidgetId_Saturday"
      >
        main:dateTime:weekdaysAbbr:saturday
      </label>
    </div>
    <div
      class="dayPickerOption"
    >
      <input
        disabled=""
        id="DayRangeWidgetId_Sunday"
        name="Sunday"
        title="Sunday"
        type="checkbox"
        value="Sunday"
      />
      <label
        for="DayRangeWidgetId_Sunday"
      >
        main:dateTime:weekdaysAbbr:sunday
      </label>
    </div>
  </div>
</div>
`;

exports[`Do not show dropdown 1`] = `
<div>
  <div
    class="tr__form-dayPicker"
  >
    <div
      class="dayPickerOption"
    >
      <input
        checked=""
        id="DayRangeWidgetId_Monday"
        name="Monday"
        title="Monday"
        type="checkbox"
        value="Monday"
      />
      <label
        for="DayRangeWidgetId_Monday"
      >
        main:dateTime:weekdaysAbbr:monday
      </label>
    </div>
    <div
      class="dayPickerOption"
    >
      <input
        checked=""
        id="DayRangeWidgetId_Tuesday"
        name="Tuesday"
        title="Tuesday"
        type="checkbox"
        value="Tuesday"
      />
      <label
        for="DayRangeWidgetId_Tuesday"
      >
        main:dateTime:weekdaysAbbr:tuesday
      </label>
    </div>
    <div
      class="dayPickerOption"
    >
      <input
        checked=""
        id="DayRangeWidgetId_Wednesday"
        name="Wednesday"
        title="Wednesday"
        type="checkbox"
        value="Wednesday"
      />
      <label
        for="DayRangeWidgetId_Wednesday"
      >
        main:dateTime:weekdaysAbbr:wednesday
      </label>
    </div>
    <div
      class="dayPickerOption"
    >
      <input
        id="DayRangeWidgetId_Thursday"
        name="Thursday"
        title="Thursday"
        type="checkbox"
        value="Thursday"
      />
      <label
        for="DayRangeWidgetId_Thursday"
      >
        main:dateTime:weekdaysAbbr:thursday
      </label>
    </div>
    <div
      class="dayPickerOption"
    >
      <input
        id="DayRangeWidgetId_Friday"
        name="Friday"
        title="Friday"
        type="checkbox"
        value="Friday"
      />
      <label
        for="DayRangeWidgetId_Friday"
      >
        main:dateTime:weekdaysAbbr:friday
      </label>
    </div>
    <div
      class="dayPickerOption"
    >
      <input
        id="DayRangeWidgetId_Saturday"
        name="Saturday"
        title="Saturday"
        type="checkbox"
        value="Saturday"
      />
      <label
        for="DayRangeWidgetId_Saturday"
      >
        main:dateTime:weekdaysAbbr:saturday
      </label>
    </div>
    <div
      class="dayPickerOption"
    >
      <input
        id="DayRangeWidgetId_Sunday"
        name="Sunday"
        title="Sunday"
        type="checkbox"
        value="Sunday"
      />
      <label
        for="DayRangeWidgetId_Sunday"
      >
        main:dateTime:weekdaysAbbr:sunday
      </label>
    </div>
  </div>
</div>
`;
